new FR update